# persistent-loadout

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md
.github/workflows/: _build.yml  _release.yml  ci.yml  clippy.yml  publish.yml  release.yml
src/: datarefs.rs  flight_loop.rs  lib.rs  loadout.rs  log.rs  plugin.rs
