[package]
name = "persistent-loadout"
version = "0.4.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.1"
xplm = { version = "0.4.1", git = "https://github.com/telephono/rust-xplm.git", branch = "xplugin-receive-message" }
xplm-sys = { version = "0.5.0", git = "https://github.com/telephono/xplm-sys.git", branch = "update-sdk-411" }
